[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Downloads new quotes from https://api.quotable.io"
authors = ["James Jarvis <git@jamesjarvis.io>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
